--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -27,7 +27,7 @@ jobs:
       if: matrix.os == 'macOS-latest'
       run: |
         brew update
-        brew install texinfo bison flex ninja
+        brew install texinfo bison flex ninja gmp
 
     - name: Runs all the stages in the shell
       run: |
