--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+#        os: [macos-latest, ubuntu-latest]
+        os: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -27,7 +28,7 @@ jobs:
       if: matrix.os == 'macOS-latest'
       run: |
         brew update
-        brew install texinfo bison flex ninja gmp
+        brew install texinfo bison flex ninja
 
     - name: Runs all the stages in the shell
       run: |
