--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -11,13 +11,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+#        os: [macos-latest, ubuntu-latest]
+        os: [ubuntu-20.04]
 
     steps:
     - uses: actions/checkout@v4
     
     - name: Install Ubuntu dependencies
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-20.04'
       run: |
         sudo apt-get update
         sudo apt-get -y install texinfo bison flex findutils ninja-build
