--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -12,19 +12,19 @@ jobs:
     strategy:
       matrix:
 #        os: [macos-latest, ubuntu-latest]
-        os: [ubuntu-22.04]
+        os: [macos-11, ubuntu-22.04]
 
     steps:
     - uses: actions/checkout@v4
     
     - name: Install Ubuntu dependencies
-      if: matrix.os == 'ubuntu-22.04'
+      if: contains(matrix.os, 'ubuntu')
       run: |
         sudo apt-get update
         sudo apt-get -y install texinfo bison flex findutils ninja-build
     
     - name: Install Mac dependencies
-      if: matrix.os == 'macOS-latest'
+      if: contains(matrix.os, 'macos')
       run: |
         brew update
         brew install texinfo bison flex ninja
