--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-13, ubuntu-22.04]
+        os: [macos-13, ubuntu-22.04, ubuntu-22.04-arm]
 
     steps:
     - uses: actions/checkout@v4
