--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         push: true
 #        tags: ${{ github.repository }}:${{ env.DOCKER_TAG }}
-        tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository_name }}:${{ env.DOCKER_TAG }}
+        tags: ${{ env.DOCKER_USERNAME }}/${{ github.repository_name }}:${{ env.DOCKER_TAG }}
     
     - name: Send Compile action
       run: |
