--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,14 +31,14 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
-        username: ${{ env.DOCKER_USERNAME }}
+        username: ${{ vars.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - uses: docker/build-push-action@v4
       with:
         push: true
 #        tags: ${{ github.repository }}:${{ env.DOCKER_TAG }}
-        tags: ${{ env.DOCKER_USERNAME }}/${{ github.repository_name }}:${{ env.DOCKER_TAG }}
+        tags: ${{ vars.DOCKER_USERNAME }}/${{ github.repository_name }}:${{ env.DOCKER_TAG }}
     
     - name: Send Compile action
       run: |
