--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,14 +36,14 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
-        username: ${{ vars.DOCKER_USERNAME }}
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - uses: docker/build-push-action@v4
       with:
         push: true
-#        tags: ${{ github.repository }}:${{ env.DOCKER_TAG }}
-        tags: ${{ vars.DOCKER_USERNAME }}/${{ env.GITHUB_REPOSITORY_NAME }}:${{ env.DOCKER_TAG }}
+        tags: ${{ github.repository }}:${{ env.DOCKER_TAG }}
+#        tags: ${{ vars.DOCKER_USERNAME }}/${{ env.GITHUB_REPOSITORY_NAME }}:${{ env.DOCKER_TAG }}
     
     - name: Send Compile action
       run: |
